--- a/index.html
+++ b/index.html
@@ -46,13 +46,24 @@
                     <h2>Login Here</h2>
                     <input type="email" name="email" placeholder="Enter Your Email">
                     <input type="password" name="" placeholder="Enter Your Password">
-                    <Button class="btn"><a href="#">Login</a></Button> 
+                    <Button class="btnn"><a href="#">Login</a></Button> 
+                    <p class="link">Don't Have an accout <br>
+                    <a href="#">Sign Up</a> Here</a></p>
+                    <p class="liw">Log In With </p> 
+                    
 
-                    <p class="link">Don't Have an accout </p><br>
-                    <a href="#">Sign Up Hare</a>
-                    <p class="liw">Log In Wint </p> 
+                <div class="icons"> 
+                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
+
+
+                </div>
                 </div>
         </div>
     </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
